# bj-vision-syncsoft

./: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
app/: __init__.py  models.py
app/alembic/: env.py
app/alembic/versions/: 9fac8806e9a8_init_database.py
app/core/: config.py
app/routes/: deps.py  game_sessions.py  stream.py  tasks.py  webrtc.py
app/vision/: __init__.py  processor.py
frontend/: index.html  webrtc.html
scripts/: README.md  diagnose_cut_card.py  draw_bboxes.py  extract-session-ending-frames.py  extract_frames.py  pattern-matching.py  ws_stream_video.py
tests/: conftest.py  test_game_sessions_api.py  test_tasks_api.py  test_videos_api.py  test_vision_processor.py
