[project]
name = "blackjack-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "cryptography>=46.0.5",
    "fastapi[standard]>=0.135.1",
    "opencv-python>=4.13.0.92",
    "pymysql>=1.1.2",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.37",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
